--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,20 @@ jobs:
             - name: Install dependencies
               run: |
                 python -m pip install --upgrade pip
-                pip install -r requirements.txt
+                - name: Cache dependencies
+                  uses: actions/cache@v3
+                  with:
+                  path: ~/.cache/pip
+                  key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+                  restore-keys: |
+                    ${{ runner.os }}-pip-
+
+                - name: Install dependencies
+                  run: |
+                  python -m pip install --upgrade pip
+                  pip install -r requirements.txt
+                  pip install flake8 black
+                pip install flake8 black
 
             - name: Run Pytest
               run: |
