--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,8 @@
-name: CI
+name: ci pipeline
 
 on:
     pull_request:
-        branches:
-            - main
+        branches: [main]
 
 jobs:
     test:
